Terrafrom/Module/SG/main.tf
#ALB Security Group
resource "aws_security_group" "alb" {

  name        = "${var.vpc_name}-alb-sg"
  description = "ALB Security Group"
  vpc_id      = var.vpc_id

  ingress {

    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  ingress {

    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  egress {

    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }
  tags = merge(var.tags,{ Name = "${var.vpc_name}-alb-sg"})
}
#ECS Security Group
resource "aws_security_group" "ecs" {

  name        = "${var.vpc_name}-ecs-sg"
  description = "ECS Security Group"
  vpc_id      = var.vpc_id

  ingress {

    from_port = 8080
    to_port   = 8080
    protocol  = "tcp"

    security_groups = [
      aws_security_group.alb.id
    ]

  }

  egress {

    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = merge(var.tags,{Name = "${var.vpc_name}-ecs-sg"})

}
#RDS Security Group
resource "aws_security_group" "rds" {

  name        = "${var.vpc_name}-rds-sg"
  description = "RDS Security Group"
  vpc_id      = var.vpc_id

  ingress {

    from_port = 5432
    to_port   = 5432
    protocol  = "tcp"

    security_groups = [
      aws_security_group.ecs.id
    ]
  }

  egress {

    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = merge(var.tags,{Name = "${var.vpc_name}-rds-sg"})
}
